--- a/render.yaml
+++ b/render.yaml
@@ -14,9 +14,8 @@ services:
       - key: JWT_SECRET
         sync: false
 
-  - type: static
+  - type: static_site
     name: ecom-frontend
-    env: static
     buildCommand: |
       cd frontend
       npm install
