--- a/render.yaml
+++ b/render.yaml
@@ -14,8 +14,9 @@ services:
       - key: JWT_SECRET
         sync: false
 
-  - type: static_site
+  - type: web
     name: ecom-frontend
+    runtime: static
     buildCommand: |
       cd frontend
       npm install
