Fix Render blueprint: remove unsupported URL reference; prompt REACT_APP_API_URL

--- a/render.yaml
+++ b/render.yaml
@@ -24,7 +24,4 @@ services:
     staticPublishPath: frontend/build
     envVars:
       - key: REACT_APP_API_URL
-        fromService:
-          type: web
-          name: ecom-backend
-          property: url
+        sync: false
